--- a/public/index.html
+++ b/public/index.html
@@ -151,12 +151,13 @@
                     <button id="teacher-login-btn" class="w-full py-2 rounded-md btn btn-primary">교사 로그인</button>
                     <button id="teacher-google-login-btn" class="w-full py-2 mt-2 rounded-md btn btn-secondary"><i class="fab fa-google mr-2"></i>Google로 로그인</button>
                 </div>
-                <div class="mt-6 text-center">
+                <div class="mt-6 text-center space-y-2">
                     <button id="show-student-register-btn" class="w-full text-center text-sm text-amber-600 hover:underline">처음이신가요? 학생 등록하기</button>
+                    <button id="show-teacher-register-btn" class="w-full text-center text-sm text-amber-600 hover:underline">교사이신가요? 회원가입하기</button>
                 </div>
             </div>
         </div>
-        
+
         <!-- Student Register View -->
         <div id="student-register-view" class="view">
             <div class="bg-white p-8 rounded-lg shadow-md max-w-md mx-auto">
@@ -167,6 +168,27 @@
                 </div>
                 <button id="student-register-btn" class="w-full py-2 rounded-md btn btn-primary mb-4">등록하고 코드 받기</button>
                 <button id="back-to-login-btn" class="w-full text-center text-sm text-gray-600 hover:underline">로그인 화면으로 돌아가기</button>
+            </div>
+        </div>
+
+        <!-- Teacher Register View -->
+        <div id="teacher-register-view" class="view">
+            <div class="bg-white p-8 rounded-lg shadow-md max-w-md mx-auto">
+                <h2 class="text-2xl font-bold mb-6 text-center">🧑‍🏫 교사 회원가입</h2>
+                <div class="mb-4">
+                    <label for="teacher-register-name" class="block text-sm font-medium text-gray-700 mb-1">이름</label>
+                    <input type="text" id="teacher-register-name" class="w-full p-2 border border-gray-300 rounded-md form-input" placeholder="이름을 입력하세요">
+                </div>
+                <div class="mb-4">
+                    <label for="teacher-register-email" class="block text-sm font-medium text-gray-700 mb-1">이메일</label>
+                    <input type="email" id="teacher-register-email" class="w-full p-2 border border-gray-300 rounded-md form-input" placeholder="example@email.com">
+                </div>
+                <div class="mb-6">
+                    <label for="teacher-register-password" class="block text-sm font-medium text-gray-700 mb-1">비밀번호</label>
+                    <input type="password" id="teacher-register-password" class="w-full p-2 border border-gray-300 rounded-md form-input" placeholder="6자리 이상 비밀번호를 입력하세요">
+                </div>
+                <button id="teacher-register-btn" class="w-full py-2 rounded-md btn btn-primary mb-4">회원가입</button>
+                <button id="teacher-back-to-login-btn" class="w-full text-center text-sm text-gray-600 hover:underline">로그인 화면으로 돌아가기</button>
             </div>
         </div>
         
@@ -1142,6 +1164,7 @@
         const views = {
             login: document.getElementById('login-view'),
             studentRegister: document.getElementById('student-register-view'),
+            teacherRegister: document.getElementById('teacher-register-view'),
             dashboard: document.getElementById('dashboard-container'),
             admin: document.getElementById('admin-view'),
         };
@@ -1423,6 +1446,7 @@
                 coins: 0,
                 balance: 0,
                 portfolio: {},
+                aeduTokens: 0,
                 createdAt: serverTimestamp()
             };
 
@@ -1850,8 +1874,22 @@
 
 
         // --- Event Listeners ---
-        document.getElementById('show-student-register-btn').addEventListener('click', () => switchView('studentRegister'));
-        document.getElementById('back-to-login-btn').addEventListener('click', () => switchView('login'));
+        document.getElementById('show-student-register-btn').addEventListener('click', () => {
+            switchView('studentRegister');
+            switchLoginTab('student');
+        });
+        document.getElementById('show-teacher-register-btn').addEventListener('click', () => {
+            switchView('teacherRegister');
+            switchLoginTab('teacher');
+        });
+        document.getElementById('back-to-login-btn').addEventListener('click', () => {
+            switchView('login');
+            switchLoginTab('student');
+        });
+        document.getElementById('teacher-back-to-login-btn').addEventListener('click', () => {
+            switchView('login');
+            switchLoginTab('teacher');
+        });
         document.getElementById('admin-page-btn').addEventListener('click', () => {
             switchView('admin');
             loadAdminData();
@@ -1893,6 +1931,61 @@
             document.getElementById('back-to-home-btn').classList.add('hidden');
             switchView('login');
             if (stockUpdateInterval) clearInterval(stockUpdateInterval);
+        });
+
+        // Teacher Registration
+        document.getElementById('teacher-register-btn').addEventListener('click', async () => {
+            const name = document.getElementById('teacher-register-name').value.trim();
+            const email = document.getElementById('teacher-register-email').value.trim();
+            const password = document.getElementById('teacher-register-password').value;
+
+            if (!name || !email || !password) {
+                showModal('오류', '이름, 이메일, 비밀번호를 모두 입력해주세요.');
+                return;
+            }
+
+            try {
+                const userCredential = await createUserWithEmailAndPassword(auth, email, password);
+
+                await setDoc(doc(db, 'users', userCredential.user.uid), {
+                    uid: userCredential.user.uid,
+                    name,
+                    email,
+                    role: 'teacher',
+                    userCode: null,
+                    coins: 0,
+                    balance: 0,
+                    portfolio: {},
+                    aeduTokens: 0,
+                    createdAt: serverTimestamp()
+                }, { merge: true });
+
+                await addDoc(collection(db, 'signupLog'), {
+                    name,
+                    email,
+                    role: 'teacher',
+                    signedUpAt: serverTimestamp()
+                });
+
+                document.getElementById('teacher-register-name').value = '';
+                document.getElementById('teacher-register-email').value = '';
+                document.getElementById('teacher-register-password').value = '';
+
+                showModal('가입 완료', `환영합니다, ${name} 선생님!<br>이제 교사용 기능을 이용해보세요.`);
+                switchView('login');
+                switchLoginTab('teacher');
+            } catch (error) {
+                console.error('Teacher registration error:', error);
+                let message = '교사 회원가입 중 문제가 발생했습니다. 잠시 후 다시 시도해주세요.';
+                if (error.code === 'auth/email-already-in-use') {
+                    message = '이미 사용 중인 이메일입니다. 다른 이메일을 사용해주세요.';
+                } else if (error.code === 'auth/invalid-email') {
+                    message = '유효한 이메일 주소를 입력해주세요.';
+                } else if (error.code === 'auth/weak-password') {
+                    message = '비밀번호는 6자 이상이어야 합니다.';
+                }
+                showModal('오류', message);
+            }
         });
 
         // Student Registration
